# Social-Media-Analysis-Exam-1

./: .pre-commit-config.yaml  README.md  exam_part1.ipynb  pyproject.toml  requirements.txt
data/: train.csv  val.csv  yelp_businesses.json  yelp_reviews_hamburg_en.csv  yelp_reviews_kiel_de.csv
helper/: cross_validation.py  normalize_documents.py
