[tool.poetry]
name = "deep-learning"
version = "0.1.0"
description = ""
authors = ["Tom Wüsten"]


[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
pymongo = "^4.0.2"
tweepy = "^4.8.0"
python-dotenv = "^0.20.0"
emoji = "^1.7.0"
spacy = "^3.2.4"
seaborn = "^0.11.2"
gensim = "^4.1.2"
nltk = "^3.7"
scikit-learn = "^1.0.2"
textblob = "^0.17.1"
vaderSentiment = "^3.3.2"
transformers = "^4.19.2"
torch = "^1.11.0"
pytorch-lightning = "^1.6.3"
dataset = "^1.5.2"
datasets = "^2.2.2"
langdetect = "^1.0.9"
jupyter-black = "^0.3.1"
imblearn = "^0.0"
huggingface-hub = "^0.7.0"
tabulate = "^0.8.9"



[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
flake8 = "^4.0.1"
jupyter-black = "^0.3.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
